fixed wrapping for code blocks in responses

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+code {
+    white-space : pre-wrap !important;
+}
+
 .body{
 
     width: 800px;
@@ -190,8 +194,8 @@
     background: rgba(0, 0, 0, 0.05);
     max-width: 95%;
     max-height: 500px;
-    overflow: hidden;
-    overflow-x: auto;
+    position: relative;
+    overflow: auto;
     padding: 10px;
     border-radius:10px; 
 }
